feat: Refactor terms and conditions

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -8,10 +8,10 @@
   "yourLanguageHelper": "من فضلك، يرجى كتابة اللغة التي تتحدث بها",
   "registerText": "تسجيل الدخول",
   "iAgree": "أوافق",
-  "tcpp": "معلومات حول حماية البيانات: \n \n تم إنشاء هذا التطبيق من قبل متطوعين يعملون في مجال تقنيات المعلومات من أجل جمع جهود البحث والإنقاذ والمساعدة والدعم في قاعدة بيانات مشتركة في كارثة الزلزال العظيم الذي وقع في تركيا في فبراير 6 ، 2023 ونقلها إلى المؤسسات والمنظمات المعتمدة. \n \n ستتم معالجة البيانات الشخصية تلقائيًا للأشخاص الذين تحددهم المحتاجين إلى مساعدة أو دعم، ولأسباب قانونية ، إذا كان من الضروري لحماية الحياة أو السلامة الجسدية للشخص أو أي شخص آخر ، غير قادر على التعبير عن موافقته بسبب استحالة فعلية أو أنه غير مؤهل قانونًا . \n \n ستتم معالجة البيانات الشخصية الخاصة بك بناءً على السبب القانوني الذي يجعل معالجة البيانات إلزامي لإنشاء وممارسة وحماية حق ما. وسيتم جمع المخدمات في قاعدة بيانات موجودة في الدولة وخارجها ، وسيتم مشاركتها مع منظمات البحث والإنقاذ المعتمدة مثل Afad و Akut و Kızılay ، وكذلك المنظمات غير الحكومية التي يمكنها تلبية طلبات الدعم والمساعدة ، و المترجمين ، لأغراض معالجة البيانات الشخصية.",
+  "tosText": "معلومات حول حماية البيانات: \n \n تم إنشاء هذا التطبيق من قبل متطوعين يعملون في مجال تقنيات المعلومات من أجل جمع جهود البحث والإنقاذ والمساعدة والدعم في قاعدة بيانات مشتركة في كارثة الزلزال العظيم الذي وقع في تركيا في فبراير 6 ، 2023 ونقلها إلى المؤسسات والمنظمات المعتمدة. \n \n ستتم معالجة البيانات الشخصية تلقائيًا للأشخاص الذين تحددهم المحتاجين إلى مساعدة أو دعم، ولأسباب قانونية ، إذا كان من الضروري لحماية الحياة أو السلامة الجسدية للشخص أو أي شخص آخر ، غير قادر على التعبير عن موافقته بسبب استحالة فعلية أو أنه غير مؤهل قانونًا . \n \n ستتم معالجة البيانات الشخصية الخاصة بك بناءً على السبب القانوني الذي يجعل معالجة البيانات إلزامي لإنشاء وممارسة وحماية حق ما. وسيتم جمع المخدمات في قاعدة بيانات موجودة في الدولة وخارجها ، وسيتم مشاركتها مع منظمات البحث والإنقاذ المعتمدة مثل Afad و Akut و Kızılay ، وكذلك المنظمات غير الحكومية التي يمكنها تلبية طلبات الدعم والمساعدة ، و المترجمين ، لأغراض معالجة البيانات الشخصية.",
   "welcomeText": "الترجمة التطوعية",
   "welcomeHeader": "اعثر على مترجم بسرعة!",
-  "welomeBody": "اعثر على مترجمين بأي لغة بسرعة وسهولة وتواصل معهم مباشرة على منصتنا!",
+  "welcomeBody": "اعثر على مترجمين بأي لغة بسرعة وسهولة وتواصل معهم مباشرة على منصتنا!",
   "homePage": "الصفحة الرئيسية",
   "beInterpreter": "كن مترجمًا",
   "translatorProfile": "ملف المترجم",
@@ -66,7 +66,7 @@
   "registerWithGoogle": "سجل مع جوجل",
   "alreadyHaveAnAccount": "هل لديك حساب بالفعل؟ ",
   "login": "تسجيل الدخول",
-  "wellcome": "مرحبا",
+  "welcome": "مرحبا",
   "interpreterList": "قائمة المترجم",
   "nameSurname": "الاسم الكامل",
   "chooseLanguage": "اختر اللغة",
@@ -79,7 +79,6 @@
   "beInterpreterDescription": "يمكنك ملء النموذج أدناه لتصبح مترجمًا. يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
   "interpreterListDescription": "يمكنك الوصول إلى قائمة المترجمين من الجدول أدناه. يمكنك التقدم للحصول على مترجم جديد على https://هنا.",
   "interpreterListDescription2": "يمكنك الوصول إلى قائمة المترجمين من خلال الجدول أدناه. يمكنك مشاهدة ملفك الشخصي https://هنا.",
-  "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها",
   "yourProfile": "ملفك الشخصي",
   "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
   "editProfileDescription": "يمكنك تحديث ملفك الشخصي من https://هنا.",
