--- a/lang/ku.json
+++ b/lang/ku.json
@@ -8,10 +8,10 @@
     "yourLanguageHelper": "Ji kerema xwe zimanên ku hûn baş dizanin binivîsin",
     "registerText": "Qeyd Bibe",
     "iAgree": "Ez razî me",
-    "tcpp": "Agahiyên li ser Parastina Daneyan:\n\nEv sepan, ji hêla dildarên ku di warê teknolojiyên agahdariyê de dixebitin hatiye amadekirin. Armanca wê ew e ku hemû daxwaz û pêdiviyên kesên ji ber Erdheja mezin ya roja 06.02.2023, li Tirkiyê pêk hatiye de mexdûr bûne, li cihekî kom bike û wan agahiyan/daneyan bigihîne sazî û kesên berpirsiyar. Herwiha bi vê sepanê wê hewl bê dayîn ku xebatên lêgerîn û xelaskirinê bi awayekî organîzetir were li dar xistin.\n\nDaneyên şexsî yên kesên ku hûn bawer dikin pêdiviya wan bi arîkarî an piştgiriyê heye, heke ew kes di rewşeke wisa de bin ku nikaribin bi xwe îcazetê bidin, wê ji ber sedemên awarte, daneyê wan kesan, bi awayekî otomatik, bixweber were xebitandin. Sedemên awarte çi ne? Astengiyên huqûqî, parastina yekîtiya laş û xelaskirina can, û rewşên  wekî din yê heyatî. \n\nDaneyên we yên şexsî dê bi saya bingehên qanûnî were bikaranîn çimkî mecbûrî ye ku daneyên şexsî ji bo parastina mafên mirovan werin bikaranîn. \n\nAgahiyên ku hûn bi me re parve dikin, wê li ser serverê me yên li nava welêt û derveyî welêt werin kom kirin. Dûre wê bi saziyên berpirsiyar yên wek Afad, Akut, Kızılay re bi awayekî qismî were parve kirin. Herwiha wê ev agahî bo tîm û komên lêgrîn û xelaskirinê bê dayîn, saziyên civakî yê sivîl û wergêran re jî bi awayekî qismî were parve kirin.",
+    "tosText": "Agahiyên li ser Parastina Daneyan:\n\nEv sepan, ji hêla dildarên ku di warê teknolojiyên agahdariyê de dixebitin hatiye amadekirin. Armanca wê ew e ku hemû daxwaz û pêdiviyên kesên ji ber Erdheja mezin ya roja 06.02.2023, li Tirkiyê pêk hatiye de mexdûr bûne, li cihekî kom bike û wan agahiyan/daneyan bigihîne sazî û kesên berpirsiyar. Herwiha bi vê sepanê wê hewl bê dayîn ku xebatên lêgerîn û xelaskirinê bi awayekî organîzetir were li dar xistin.\n\nDaneyên şexsî yên kesên ku hûn bawer dikin pêdiviya wan bi arîkarî an piştgiriyê heye, heke ew kes di rewşeke wisa de bin ku nikaribin bi xwe îcazetê bidin, wê ji ber sedemên awarte, daneyê wan kesan, bi awayekî otomatik, bixweber were xebitandin. Sedemên awarte çi ne? Astengiyên huqûqî, parastina yekîtiya laş û xelaskirina can, û rewşên  wekî din yê heyatî. \n\nDaneyên we yên şexsî dê bi saya bingehên qanûnî were bikaranîn çimkî mecbûrî ye ku daneyên şexsî ji bo parastina mafên mirovan werin bikaranîn. \n\nAgahiyên ku hûn bi me re parve dikin, wê li ser serverê me yên li nava welêt û derveyî welêt werin kom kirin. Dûre wê bi saziyên berpirsiyar yên wek Afad, Akut, Kızılay re bi awayekî qismî were parve kirin. Herwiha wê ev agahî bo tîm û komên lêgrîn û xelaskirinê bê dayîn, saziyên civakî yê sivîl û wergêran re jî bi awayekî qismî were parve kirin.",
     "welcomeText": "Wergêrîya Xwebexşî",
     "welcomeHeader": "Zû wergerek peyda bike!",
-    "welomeBody": "Zû û bi hêsanî wergêrên bi her zimanî bibîne û rasterast li ser platforma me bi wan re têkilî dane!",
+    "welcomeBody": "Zû û bi hêsanî wergêrên bi her zimanî bibîne û rasterast li ser platforma me bi wan re têkilî dane!",
     "homePage": "Rûpelê Sereke",
     "beInterpreter": "Bibe Wergêr",
     "translatorProfile": "Profilê Wergêrê",
@@ -66,7 +66,7 @@
     "registerWithGoogle": "Bi Google re têketin",
     "alreadyHaveAnAccount": "Hûn jixwe hesabek hebûn? ",
     "login": "Têketin",
-    "wellcome": "Xoşbûn",
+    "welcome": "Xoşbûn",
     "interpreterList": "Lîsteya Wergêran",
     "nameSurname": "Navê Binivîse",
     "chooseLanguage": "Zimanê hilbijêre",
@@ -79,7 +79,6 @@
     "beInterpreterDescription": "Hûn dikarin forma jêrîn dagirin da ku bibin wergêr. Hûn dikarin ji https://vir xwe bigihînin navnîşa wergêran.",
     "interpreterListDescription": "Hûn dikarin ji tabloya jêrîn xwe bigihînin navnîşa wergêran. Hûn dikarin ji bo wergerek nû serî li https://vir bidin.",
     "interpreterListDescription2": "Tu dikarin lişta têrkemên ji tabloya jêrê bikî. Tu dikarin profîla xwe ji https://vir bibî.",
-    "truthAck": "Ez qebûl dikim û radigihînim ku agahiyên ku min dane rast û piştrast in, ku min hemî tedbîr û tedbîrên pêwîst girtine ji bo pêşîgirtina li qirêjbûna agahdarî û kiryarên xelet, û her guhertin û nûvekirina agahdariya ku min daye ez ê ragihînim.",
     "yourProfile": "Profîla xwe",
     "yourProfileDescription": "Hûn dikarin ji https://vir xwe bigihînin navnîşa wergêran.",
     "editProfileDescription": "Hûn dikarin profîla xwe ji https://here nûve bikin.",
