--- a/lang/ru.json
+++ b/lang/ru.json
@@ -8,10 +8,10 @@
   "yourLanguageHelper": "Напишите языки, которыми вы хорошо владеете.",
   "registerText": "Регистрация",
   "iAgree": "Подтверждаю",
-  "tcpp": "Информация о защите данных:\n\nЭто приложение было создано волонтерами, работающими в сфере информационных технологий, с целью сбора аварийно-спасательных работ и запросов о помощи и поддержке в общей базе данных во время землетрясения, произошедшего в Турции 6 февраля 2023 года, и передачи их уполномоченным учреждениям и организациям.\n\nC целью помощи или поддержки, персональные данные указанных вами, будут обрабатываться автоматически, на основании законных оснований, если лицо, которое не может выразить свое согласие из-за фактической невозможности или чье согласие не имеет юридической силы, необходима для защиты его или чьей-либо жизни или физической неприкосновенности.\n\nПерсональные данные, принадлежащие вам, будут обрабатываться на том законном основании, что обработка данных является обязательной для установления, использования и защиты права.\n\nЛичные данные, такие как имя, фамилия, телефон и адрес, указанные в запросах на помощь и поддержку, которыми вы поделитесь, будут собираться в базе данных, созданной нами, серверы которые расположены в Турции и за рубежом, обработка персональных данных уполномоченными поисково-спасательными организациями такие как АФАД, Кызылай, а также неправительственные организации и переводчики, которые могут удовлетворить запросы на поддержку и помощь, будут доступны для ограниченного использования.",
+  "tosText": "Информация о защите данных:\n\nЭто приложение было создано волонтерами, работающими в сфере информационных технологий, с целью сбора аварийно-спасательных работ и запросов о помощи и поддержке в общей базе данных во время землетрясения, произошедшего в Турции 6 февраля 2023 года, и передачи их уполномоченным учреждениям и организациям.\n\nC целью помощи или поддержки, персональные данные указанных вами, будут обрабатываться автоматически, на основании законных оснований, если лицо, которое не может выразить свое согласие из-за фактической невозможности или чье согласие не имеет юридической силы, необходима для защиты его или чьей-либо жизни или физической неприкосновенности.\n\nПерсональные данные, принадлежащие вам, будут обрабатываться на том законном основании, что обработка данных является обязательной для установления, использования и защиты права.\n\nЛичные данные, такие как имя, фамилия, телефон и адрес, указанные в запросах на помощь и поддержку, которыми вы поделитесь, будут собираться в базе данных, созданной нами, серверы которые расположены в Турции и за рубежом, обработка персональных данных уполномоченными поисково-спасательными организациями такие как АФАД, Кызылай, а также неправительственные организации и переводчики, которые могут удовлетворить запросы на поддержку и помощь, будут доступны для ограниченного использования.",
   "welcomeText": "Волонтёрский Перевод",
   "welcomeHeader": "Найдите переводчика за пару кликов!",
-  "welomeBody": "Быстро и легко находите переводчиков любого языка и общайтесь с ними прямо на нашей платформе!",
+  "welcomeBody": "Быстро и легко находите переводчиков любого языка и общайтесь с ними прямо на нашей платформе!",
   "homePage": "Главная",
   "beInterpreter": "Стать Переводчиком",
   "translatorProfile": "Профиль Переводчика",
@@ -66,7 +66,7 @@
   "registerWithGoogle": "Зарегистрироваться через Google",
   "alreadyHaveAnAccount": "У Вас уже есть учётной записи?",
   "login": "Вход",
-  "wellcome": "Добро пожаловать",
+  "welcome": "Добро пожаловать",
   "interpreterList": "Список Переводчиков",
   "nameSurname": "Полное Имя",
   "chooseLanguage": "Выберите язык",
@@ -79,7 +79,6 @@
   "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Доступ к списку переводчиков через https://здесь.",
   "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже. Ссылка для подачи заявки на нового переводчика https://здесь.",
   "interpreterListDescription2": "Список переводчиков доступен по ссылке ниже. Профиль можно посмотреть 'здесь'.",
-  "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации.",
   "yourProfile": "Ваш профиль",
   "yourProfileDescription": "Доступ к списку переводчиков через https://здесь.",
   "editProfileDescription": "Вы можете обновить свой профиль https://здесь.",
