--- a/lang/tr.json
+++ b/lang/tr.json
@@ -8,10 +8,10 @@
   "yourLanguageHelper": "Lütfen akıcı bir şekilde konuştuğunuz dilleri yazınız",
   "registerText": "Kayıt Ol",
   "iAgree": "Kabul Ediyorum",
-  "tcpp": "Verilerin Korunması Hakkında Bilgilendirme:\n\nBu uygulama, 6 Şubat 2023 tarihinde Türkiye’de meydana gelen büyük deprem felaketinde, arama kurtarma çalışmaları ile yardım ve destek taleplerini ortak bir veri tabanında toplayarak yetkili kurum ve kuruluşlara aktarmak amacıyla bilişim teknolojileri alanında çalışan gönüllüler tarafından oluşturulmuştur.\n\nYardım ya da desteğe ihtiyacı olduğunu belirttiğiniz kişilerin kişisel verileri, Fiili imkânsızlık nedeniyle rızasını açıklayamayacak durumda bulunan veya rızasına hukuki geçerlilik tanınmayan kişinin kendisinin ya da bir başkasının hayatı veya beden bütünlüğünün korunması için zorunlu olması, hukuki sebebine dayanarak, otomatik yollarla işlenecektir.\n\nTarafınıza ait kişisel veriler, Bir hakkın tesisi, kullanılması ve korunması için veri işlemenin zorunlu olması, hukuki sebebine dayanarak işlenecektir.\n\nPaylaşacağınız yardım, destek taleplerinde yer alan isim, soyisim, telefon ve adres gibi kişisel veriler, tarafımızca oluşturulan ve sunucuları yurtiçi ve yurtdışında bulunan veri tabanında toplanarak, Afad, Akut, Kızılay gibi yetkili arama kurtarma kuruluşlarının yanı sıra destek ve yardım taleplerini karşılayabilecek sivil toplum kuruluşları ve Tercümanlar ile kişisel veri işleme amacı ile sınırlı olarak paylaşılacaktır.",
+  "tosText": "Verilerin Korunması Hakkında Bilgilendirme:\n\nBu uygulama, 6 Şubat 2023 tarihinde Türkiye’de meydana gelen büyük deprem felaketinde, arama kurtarma çalışmaları ile yardım ve destek taleplerini ortak bir veri tabanında toplayarak yetkili kurum ve kuruluşlara aktarmak amacıyla bilişim teknolojileri alanında çalışan gönüllüler tarafından oluşturulmuştur.\n\nYardım ya da desteğe ihtiyacı olduğunu belirttiğiniz kişilerin kişisel verileri, Fiili imkânsızlık nedeniyle rızasını açıklayamayacak durumda bulunan veya rızasına hukuki geçerlilik tanınmayan kişinin kendisinin ya da bir başkasının hayatı veya beden bütünlüğünün korunması için zorunlu olması, hukuki sebebine dayanarak, otomatik yollarla işlenecektir.\n\nTarafınıza ait kişisel veriler, Bir hakkın tesisi, kullanılması ve korunması için veri işlemenin zorunlu olması, hukuki sebebine dayanarak işlenecektir.\n\nPaylaşacağınız yardım, destek taleplerinde yer alan isim, soyisim, telefon ve adres gibi kişisel veriler, tarafımızca oluşturulan ve sunucuları yurtiçi ve yurtdışında bulunan veri tabanında toplanarak, Afad, Akut, Kızılay gibi yetkili arama kurtarma kuruluşlarının yanı sıra destek ve yardım taleplerini karşılayabilecek sivil toplum kuruluşları ve Tercümanlar ile kişisel veri işleme amacı ile sınırlı olarak paylaşılacaktır.",
   "welcomeText": "Gönüllü Tercümanlık",
   "welcomeHeader": "Hızla tercüman bul!",
-  "welomeBody": "Herhangi bir dilde hızla ve kolayca tercüman bulun ve onlarla doğrudan platformumuz üzerinden iletişim kurun!",
+  "welcomeBody": "Herhangi bir dilde hızla ve kolayca tercüman bulun ve onlarla doğrudan platformumuz üzerinden iletişim kurun!",
   "homePage": "Ana Sayfa",
   "beInterpreter": "Tercüman Ol",
   "searchInterpreter": "Tercüman Bul",
@@ -66,7 +66,7 @@
   "registerWithGoogle": "Google ile kayıt ol",
   "alreadyHaveAnAccount": "Zaten bir hesabın var mı? ",
   "login": "Giriş",
-  "wellcome": "Hoşgeldin",
+  "welcome": "Hoşgeldin",
   "interpreterList": "Tercüman Listesi",
   "nameSurname": "İsim & Soyisim",
   "chooseLanguage": "Dil seç",
@@ -79,7 +79,6 @@
   "beInterpreterDescription": "Tercüman olmak için aşağıdaki formu doldurabilirsiniz. Tercüman listesine https://buradan erişebilirsiniz.",
   "interpreterListDescription": "Tercüman listesine aşağıdaki tablodan erişebilirsiniz. Yeni tercüman başvurusunu https://buradan yapabilirsiniz.",
   "interpreterListDescription2": "Tercüman listesine aşağıdaki tablodan erişebilirsiniz. Profilinizi https://buradan görebilirsiniz.",
-  "truthAck": "Verdiğim bilgilerin doğru ve teyit edilmiş olduğunu, bilgi kirliliği ve yanlış uygulamalara yol açmamak için gerekli tüm önlem ve tedbirleri aldığımı, vermiş olduğum bilgilerde meydana gelen değişiklik ve güncellemeleri bildireceğimi kabul ve beyan ederim.",
   "yourProfile": "Profilin",
   "yourProfileDescription": "Tercüman listesine https://buradan erişebilirsiniz.",
   "editProfileDescription": "Profilinizi https://buradan güncelleyebilirsiniz.",
