--- a/lang/en.json
+++ b/lang/en.json
@@ -8,10 +8,10 @@
   "yourLanguageHelper": "Please write down the languages you speak fluently",
   "registerText": "Register",
   "iAgree": "I agree",
-  "tcpp": "Information about Data Protection:\n\n\nThis application was created by volunteers in the field of information technology to collect search and rescue operations and support requests in a common database and pass them on to authorized institutions and organizations in response to the large earthquake disaster that occurred in Turkey on February 6, 2023.\n\nPersonal information of individuals who indicate that they need help or support will be processed automatically based on the legal reason of \"Absence of consent due to actual impossibility or lack of legal recognition of consent for the protection of life or physical integrity of oneself or others\".\n\nYour personal information will be processed based on the legal reason of \"Necessity of processing data for the establishment, use or protection of a right\".\n\nThe personal information such as name, surname, telephone and address included in the support and help requests you share, will be collected in a database created and hosted by us, both domestically and abroad, and will be shared with authorized search and rescue organizations such as AFAD, Akut and Red Crescent, as well as civil society organizations capable of meeting support and assistance requests, for the purpose of processing personal data.",
+  "tosText": "Information about Data Protection:\n\n\nThis application was created by volunteers in the field of information technology to collect search and rescue operations and support requests in a common database and pass them on to authorized institutions and organizations in response to the large earthquake disaster that occurred in Turkey on February 6, 2023.\n\nPersonal information of individuals who indicate that they need help or support will be processed automatically based on the legal reason of \"Absence of consent due to actual impossibility or lack of legal recognition of consent for the protection of life or physical integrity of oneself or others\".\n\nYour personal information will be processed based on the legal reason of \"Necessity of processing data for the establishment, use or protection of a right\".\n\nThe personal information such as name, surname, telephone and address included in the support and help requests you share, will be collected in a database created and hosted by us, both domestically and abroad, and will be shared with authorized search and rescue organizations such as AFAD, Akut and Red Crescent, as well as civil society organizations capable of meeting support and assistance requests, for the purpose of processing personal data.",
   "welcomeText": "Volunteer Translator",
   "welcomeHeader": "Find an interpreter, fast!",
-  "welomeBody": "Find an interpreter speaking any language quick, easy, and communicate directly with them through our platform!",
+  "welcomeBody": "Find an interpreter speaking any language quick, easy, and communicate directly with them through our platform!",
   "homePage": "Home",
   "beInterpreter": "Become an interpreter.",
   "translatorProfile": "Translator Profile",
@@ -43,7 +43,7 @@
   "addInstagram": "Enter your Instagram address.",
   "addTwitter": "Enter your Twitter address.",
   "addLinkedin": "Enter your LinkedIn address.",
-  "consentForm": "I have read and accept the Lighting Confirmation Text.",
+  "consentForm": "By continuing, I agree to the terms and conditions",
   "infoVerification": "I accept and declare that the information I have provided on debris, demolition, aid and support needs is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and misapplications, and that I will notify any changes and updates in the information I have given.",
   "applyInterpreter": "You can find the list of interpreter in the table below. You can apply for a new interpreter here.",
   "nameLastName": "Name & Surname",
@@ -66,7 +66,7 @@
   "registerWithGoogle": "Register with Google",
   "alreadyHaveAnAccount": "Already have an account? ",
   "login": "Login",
-  "wellcome": "Wellcome",
+  "welcome": "welcome",
   "interpreterList": "Interpreter List",
   "nameSurname": "Name Surname",
   "chooseLanguage": "Choose language",
@@ -79,7 +79,6 @@
   "beInterpreterDescription": "You can fill out the form below to become a translator. You can access the list of translators from https://here.",
   "interpreterListDescription": "You can access the list of translators from the table below. You can apply for a new translator at https://here.",
   "interpreterListDescription2": "You can access the translator list from the table below. You can see your profile from https://here.",
-  "truthAck": "I accept and declare that the information I have given is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and wrong practices, and that I will notify any changes and updates in the information I have given.",
   "yourProfile": "Your Profile",
   "yourProfileDescription": "You can access the list of translators from https://here.",
   "editProfileDescription": "You can update your profile from https://here.",
@@ -106,5 +105,6 @@
   "unknownError": "An unknown error occurred",
   "accessDisabledErrorText": "Access to this account has been temporarily disabled",
   "signInHintText": "Already have an account?",
-  "emailTakenErrorText": "An account with this email already exists"
+  "emailTakenErrorText": "An account with this email already exists",
+  "tos": "Terms and Conditions"
 }
