--- a/lang/ku.json
+++ b/lang/ku.json
@@ -105,5 +105,6 @@
     "unknownError": "Ez nizanim, têkiliyekî cuda çêbûye",
     "accessDisabledErrorText": "Girêdana vê hesabê tûnebûye",
     "signInHintText": "Hesaba heye?",
-    "emailTakenErrorText": "Hesab bi vî e-nivîsî tê vekirin"
+    "emailTakenErrorText": "Hesab bi vî e-nivîsî tê vekirin",
+    "tos": "Şêwaznameya xizmetê"
 }
