--- a/lang/ru.json
+++ b/lang/ru.json
@@ -105,5 +105,6 @@
   "unknownError": "Произошла неизвестная ошибка",
   "accessDisabledErrorText": "Доступ к этому аккаунту временно заблокирован",
   "signInHintText": "Уже есть аккаунт?",
-  "emailTakenErrorText": "Аккаунт с этой электронной почтой уже существует"
+  "emailTakenErrorText": "Аккаунт с этой электронной почтой уже существует",
+  "tos": "Условия использования"
 }
