--- a/lang/ku.json
+++ b/lang/ku.json
@@ -106,5 +106,5 @@
     "accessDisabledErrorText": "Girêdana vê hesabê tûnebûye",
     "signInHintText": "Hesaba heye?",
     "emailTakenErrorText": "Hesab bi vî e-nivîsî tê vekirin",
-    "tos": "Şêwaznameya xizmetê"
+    "termsAndConditionsLabel": "Şêwaznameya xizmetê"
 }
