fix: Change facebook to messenger

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -39,7 +39,7 @@
   "onlineSupport": "دعم عبر الإنترنت / الرقي",
   "availableSupport": "لغات الدعم التي يمكنني توفيرها",
   "addContactAddress": "أضف عنوان الاتصا",
-  "addFacebook": "أدخل عنوان Facebook الخاص بك...",
+  "addMessenger": "أدخل عنوان Messenger الخاص بك...",
   "addInstagram": "أدخل عنوان Instagram الخاص بك...",
   "addTwitter": "أدخل عنوان Twitter الخاص بك...",
   "addLinkedin": "أدخل عنوان LinkedIn الخاص بك...",
@@ -72,7 +72,7 @@
   "chooseLanguage": "اختر اللغة",
   "translationLanguage": "لغة الترجمة",
   "contantInformation": "معلومات الاتصال",
-  "facebook": "فيسبوك",
+  "messenger": "فيسبوك",
   "instagram": "إنستغرام",
   "twitter": "تويتر",
   "linkedin": "لينكد إن",
