--- a/lang/en.json
+++ b/lang/en.json
@@ -39,7 +39,7 @@
   "onlineSupport": "Digital/Online Support",
   "availableSupport": "Languages I Can Support",
   "addContactAddress": "Add Contact Address",
-  "addFacebook": "Enter your Facebook address..",
+  "addMessenger": "Enter your Messenger address..",
   "addInstagram": "Enter your Instagram address.",
   "addTwitter": "Enter your Twitter address.",
   "addLinkedin": "Enter your LinkedIn address.",
@@ -72,7 +72,7 @@
   "chooseLanguage": "Choose language",
   "translationLanguage": "Translation Language",
   "contantInformation": "Contact Information",
-  "facebook": "Facebook",
+  "messenger": "Messenger",
   "instagram": "Instagram",
   "twitter": "Twitter",
   "linkedin": "Linkedin",
