--- a/lang/ku.json
+++ b/lang/ku.json
@@ -39,7 +39,7 @@
     "onlineSupport": "Piştgiriya Dîjîtal/Liserxetê",
     "availableSupport": "Zimanên Ku Ez ê Piştgiriyê Bidim Wan",
     "addContactAddress": "Navnîşana Xwe ya Ragihandinê Tevlê Bike",
-    "addFacebook": "Navnîşana Xwe ya Facebookê Binivîse",
+    "addMessenger": "Navnîşana Xwe ya Messengerê Binivîse",
     "addInstagram": "Navnîşana Xwe ya Instagramê Binivîse",
     "addTwitter": "Navnîşana Xwe ya Twitterê Binivîse",
     "addLinkedin": "Navnîşana Xwe ya Linkedinê Binivîse",
@@ -72,7 +72,7 @@
     "chooseLanguage": "Zimanê hilbijêre",
     "translationLanguage": "Zimanê wergerê",
     "contantInformation": "Agahdariya girêdayî",
-    "facebook": "Facebook",
+    "messenger": "Messenger",
     "instagram": "Instagram",
     "twitter": "Twitter",
     "linkedin": "Linkedin",
