--- a/lang/ru.json
+++ b/lang/ru.json
@@ -39,7 +39,7 @@
   "onlineSupport": "Цифровая/онлайн-поддержка",
   "availableSupport": "Языки, которыми я могу помогать",
   "addContactAddress": "Добавить контактный адрес",
-  "addFacebook": "Введите свой адрес Facebook..",
+  "addMessenger": "Введите свой адрес Messenger..",
   "addInstagram": "Введите свой адрес Instagram..",
   "addTwitter": "Введите свой адрес Twitter..",
   "addLinkedin": "Введите свой адрес Linkedin..",
@@ -72,7 +72,7 @@
   "chooseLanguage": "Выберите язык",
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
-  "facebook": "Facebook",
+  "messenger": "Messenger",
   "instagram": "Инстаграм",
   "twitter": "Твиттер",
   "linkedin": "Linkedin",
