--- a/lang/tr.json
+++ b/lang/tr.json
@@ -39,7 +39,7 @@
   "onlineSupport": "Dijital/Online Destek",
   "availableSupport": "Destek Verebileceğim Diller",
   "addContactAddress": "İletişim Adresi Ekle",
-  "addFacebook": "Facebook adresinizi giriniz..",
+  "addMessenger": "Messenger adresinizi giriniz..",
   "addInstagram": "Instagram adresinizi giriniz..",
   "addTwitter": "Twitter adresinizi giriniz..",
   "addLinkedin": "Linkedin adresinizi giriniz..",
@@ -72,7 +72,7 @@
   "chooseLanguage": "Dil seç",
   "translationLanguage": "Tercüme Dili",
   "contantInformation": "İletişim Bilgileri",
-  "facebook": "Facebook",
+  "messenger": "Messenger",
   "instagram": "Instagram",
   "twitter": "Twitter",
   "linkedin": "Linkedin",
