fix: Change instagram to whatsapp

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -40,7 +40,7 @@
   "availableSupport": "لغات الدعم التي يمكنني توفيرها",
   "addContactAddress": "أضف عنوان الاتصا",
   "addMessenger": "أدخل عنوان Messenger الخاص بك...",
-  "addInstagram": "أدخل عنوان Instagram الخاص بك...",
+  "addWhatsApp": "أدخل عنوان WhatsApp الخاص بك...",
   "addTwitter": "أدخل عنوان Twitter الخاص بك...",
   "addLinkedin": "أدخل عنوان LinkedIn الخاص بك...",
   "consentForm": "لقد قرأت نص الخصوصية وأوافق عليه.",
@@ -73,7 +73,7 @@
   "translationLanguage": "لغة الترجمة",
   "contantInformation": "معلومات الاتصال",
   "messenger": "فيسبوك",
-  "instagram": "إنستغرام",
+  "whatsapp": "إنستغرام",
   "twitter": "تويتر",
   "linkedin": "لينكد إن",
   "beInterpreterDescription": "يمكنك ملء النموذج أدناه لتصبح مترجمًا. يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
