--- a/lang/en.json
+++ b/lang/en.json
@@ -40,7 +40,7 @@
   "availableSupport": "Languages I Can Support",
   "addContactAddress": "Add Contact Address",
   "addMessenger": "Enter your Messenger address..",
-  "addInstagram": "Enter your Instagram address.",
+  "addWhatsApp": "Enter your WhatsApp address.",
   "addTwitter": "Enter your Twitter address.",
   "addLinkedin": "Enter your LinkedIn address.",
   "consentForm": "By continuing, I agree to the terms and conditions",
@@ -73,7 +73,7 @@
   "translationLanguage": "Translation Language",
   "contantInformation": "Contact Information",
   "messenger": "Messenger",
-  "instagram": "Instagram",
+  "whatsapp": "WhatsApp",
   "twitter": "Twitter",
   "linkedin": "Linkedin",
   "beInterpreterDescription": "You can fill out the form below to become a translator. You can access the list of translators from https://here.",
