--- a/lang/ku.json
+++ b/lang/ku.json
@@ -40,7 +40,7 @@
     "availableSupport": "Zimanên Ku Ez ê Piştgiriyê Bidim Wan",
     "addContactAddress": "Navnîşana Xwe ya Ragihandinê Tevlê Bike",
     "addMessenger": "Navnîşana Xwe ya Messengerê Binivîse",
-    "addInstagram": "Navnîşana Xwe ya Instagramê Binivîse",
+    "addWhatsApp": "Navnîşana Xwe ya WhatsAppê Binivîse",
     "addTwitter": "Navnîşana Xwe ya Twitterê Binivîse",
     "addLinkedin": "Navnîşana Xwe ya Linkedinê Binivîse",
     "consentForm": "Min Nivîsara Zelalkirinê xwend û qebûl kir.",
@@ -73,7 +73,7 @@
     "translationLanguage": "Zimanê wergerê",
     "contantInformation": "Agahdariya girêdayî",
     "messenger": "Messenger",
-    "instagram": "Instagram",
+    "whatsapp": "WhatsApp",
     "twitter": "Twitter",
     "linkedin": "Linkedin",
     "beInterpreterDescription": "Hûn dikarin forma jêrîn dagirin da ku bibin wergêr. Hûn dikarin ji https://vir xwe bigihînin navnîşa wergêran.",
