--- a/lang/ru.json
+++ b/lang/ru.json
@@ -40,7 +40,7 @@
   "availableSupport": "Языки, которыми я могу помогать",
   "addContactAddress": "Добавить контактный адрес",
   "addMessenger": "Введите свой адрес Messenger..",
-  "addInstagram": "Введите свой адрес Instagram..",
+  "addWhatsApp": "Введите свой адрес WhatsApp..",
   "addTwitter": "Введите свой адрес Twitter..",
   "addLinkedin": "Введите свой адрес Linkedin..",
   "consentForm": " Я прочитал и согласен с условиями разъяснительного текста.",
@@ -73,7 +73,7 @@
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
   "messenger": "Messenger",
-  "instagram": "Инстаграм",
+  "whatsapp": "Инстаграм",
   "twitter": "Твиттер",
   "linkedin": "Linkedin",
   "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Доступ к списку переводчиков через https://здесь.",
