--- a/lang/tr.json
+++ b/lang/tr.json
@@ -40,7 +40,7 @@
   "availableSupport": "Destek Verebileceğim Diller",
   "addContactAddress": "İletişim Adresi Ekle",
   "addMessenger": "Messenger adresinizi giriniz..",
-  "addInstagram": "Instagram adresinizi giriniz..",
+  "addWhatsApp": "WhatsApp adresinizi giriniz..",
   "addTwitter": "Twitter adresinizi giriniz..",
   "addLinkedin": "Linkedin adresinizi giriniz..",
   "consentForm": "Aydınlatma Metni'ni okudum ve kabul ediyorum.",
@@ -73,7 +73,7 @@
   "translationLanguage": "Tercüme Dili",
   "contantInformation": "İletişim Bilgileri",
   "messenger": "Messenger",
-  "instagram": "Instagram",
+  "whatsapp": "WhatsApp",
   "twitter": "Twitter",
   "linkedin": "Linkedin",
   "beInterpreterDescription": "Tercüman olmak için aşağıdaki formu doldurabilirsiniz. Tercüman listesine https://buradan erişebilirsiniz.",
