feat phone number field added and current locale saving to local storage

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -2,7 +2,7 @@
   "appTitle": "Tercuman Bulucu",
   "fullName": "Tam İsminiz",
   "fullNameHelper": "Lütfen adınızı ve soyadınız yazınız",
-  "phoneNumber": "Telefon Numaramanız",
+  "phoneNumber": "Telefon Numaranız",
   "phoneNumberHelper": "Lütfen telefon numaranızı bu şekilde yazın +90XXXXXXXXX",
   "yourLanguage": "Akıcı Şekilde Konuşuyorum",
   "yourLanguageHelper": "Lütfen akıcı bir şekilde konuştuğunuz dilleri yazınız",
@@ -81,7 +81,7 @@
   "interpreterListDescription2": "Tercüman listesine aşağıdaki tablodan erişebilirsiniz. Profilinizi https://buradan görebilirsiniz.",
   "yourProfile": "Profilin",
   "yourProfileDescription": "Tercüman listesine https://buradan erişebilirsiniz.",
-  "editProfileDescription": "Profilinizi https://buradan güncelleyebilirsiniz.",
+  "editProfileDescription": " Profilinizi https://buradan güncelleyebilirsiniz.",
   "logout": "Çıkış yap",
   "updateProfile": "Profilimi güncelle",
   "save": "Kaydet",
