feat: Remove LinkedIn, Facebook, Instagram, add WhatsApp, Messenger
* fix: Change facebook to messenger
* fix: Change instagram to whatsapp
* fix: Freezed regenerate
* fix: Remove unused dependencies
* ci: GHA flutter caching
* fix: Remove LinkedIn

--- a/lang/en.json
+++ b/lang/en.json
@@ -39,8 +39,8 @@
   "onlineSupport": "Digital/Online Support",
   "availableSupport": "Languages I Can Support",
   "addContactAddress": "Add Contact Address",
-  "addFacebook": "Enter your Facebook address..",
-  "addInstagram": "Enter your Instagram address.",
+  "addMessenger": "Enter your Messenger address..",
+  "addWhatsApp": "Enter your WhatsApp address.",
   "addTwitter": "Enter your Twitter address.",
   "addLinkedin": "Enter your LinkedIn address.",
   "consentForm": "By continuing, I agree to the terms and conditions",
@@ -72,10 +72,9 @@
   "chooseLanguage": "Choose language",
   "translationLanguage": "Translation Language",
   "contantInformation": "Contact Information",
-  "facebook": "Facebook",
-  "instagram": "Instagram",
+  "messenger": "Messenger",
+  "whatsapp": "WhatsApp",
   "twitter": "Twitter",
-  "linkedin": "Linkedin",
   "beInterpreterDescription": "You can fill out the form below to become a translator. You can access the list of translators from https://here.",
   "interpreterListDescription": "You can access the list of translators from the table below. You can apply for a new translator at https://here.",
   "interpreterListDescription2": "You can access the translator list from the table below. You can see your profile from https://here.",
