--- a/lang/ku.json
+++ b/lang/ku.json
@@ -39,8 +39,8 @@
     "onlineSupport": "Piştgiriya Dîjîtal/Liserxetê",
     "availableSupport": "Zimanên Ku Ez ê Piştgiriyê Bidim Wan",
     "addContactAddress": "Navnîşana Xwe ya Ragihandinê Tevlê Bike",
-    "addFacebook": "Navnîşana Xwe ya Facebookê Binivîse",
-    "addInstagram": "Navnîşana Xwe ya Instagramê Binivîse",
+    "addMessenger": "Navnîşana Xwe ya Messengerê Binivîse",
+    "addWhatsApp": "Navnîşana Xwe ya WhatsAppê Binivîse",
     "addTwitter": "Navnîşana Xwe ya Twitterê Binivîse",
     "addLinkedin": "Navnîşana Xwe ya Linkedinê Binivîse",
     "consentForm": "Min Nivîsara Zelalkirinê xwend û qebûl kir.",
@@ -72,10 +72,9 @@
     "chooseLanguage": "Zimanê hilbijêre",
     "translationLanguage": "Zimanê wergerê",
     "contantInformation": "Agahdariya girêdayî",
-    "facebook": "Facebook",
-    "instagram": "Instagram",
+    "messenger": "Messenger",
+    "whatsapp": "WhatsApp",
     "twitter": "Twitter",
-    "linkedin": "Linkedin",
     "beInterpreterDescription": "Hûn dikarin forma jêrîn dagirin da ku bibin wergêr. Hûn dikarin ji https://vir xwe bigihînin navnîşa wergêran.",
     "interpreterListDescription": "Hûn dikarin ji tabloya jêrîn xwe bigihînin navnîşa wergêran. Hûn dikarin ji bo wergerek nû serî li https://vir bidin.",
     "interpreterListDescription2": "Tu dikarin lişta têrkemên ji tabloya jêrê bikî. Tu dikarin profîla xwe ji https://vir bibî.",
