--- a/lang/ru.json
+++ b/lang/ru.json
@@ -39,8 +39,8 @@
   "onlineSupport": "Цифровая/онлайн-поддержка",
   "availableSupport": "Языки, которыми я могу помогать",
   "addContactAddress": "Добавить контактный адрес",
-  "addFacebook": "Введите свой адрес Facebook..",
-  "addInstagram": "Введите свой адрес Instagram..",
+  "addMessenger": "Введите свой адрес Messenger..",
+  "addWhatsApp": "Введите свой адрес WhatsApp..",
   "addTwitter": "Введите свой адрес Twitter..",
   "addLinkedin": "Введите свой адрес Linkedin..",
   "consentForm": " Я прочитал и согласен с условиями разъяснительного текста.",
@@ -72,10 +72,9 @@
   "chooseLanguage": "Выберите язык",
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
-  "facebook": "Facebook",
-  "instagram": "Инстаграм",
+  "messenger": "Messenger",
+  "whatsapp": "Инстаграм",
   "twitter": "Твиттер",
-  "linkedin": "Linkedin",
   "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Доступ к списку переводчиков через https://здесь.",
   "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже. Ссылка для подачи заявки на нового переводчика https://здесь.",
   "interpreterListDescription2": "Список переводчиков доступен по ссылке ниже. Профиль можно посмотреть 'здесь'.",
