--- a/lang/tr.json
+++ b/lang/tr.json
@@ -39,8 +39,8 @@
   "onlineSupport": "Dijital/Online Destek",
   "availableSupport": "Destek Verebileceğim Diller",
   "addContactAddress": "İletişim Adresi Ekle",
-  "addFacebook": "Facebook adresinizi giriniz..",
-  "addInstagram": "Instagram adresinizi giriniz..",
+  "addMessenger": "Messenger adresinizi giriniz..",
+  "addWhatsApp": "WhatsApp adresinizi giriniz..",
   "addTwitter": "Twitter adresinizi giriniz..",
   "addLinkedin": "Linkedin adresinizi giriniz..",
   "consentForm": "Aydınlatma Metni'ni okudum ve kabul ediyorum.",
@@ -72,10 +72,9 @@
   "chooseLanguage": "Dil seç",
   "translationLanguage": "Tercüme Dili",
   "contantInformation": "İletişim Bilgileri",
-  "facebook": "Facebook",
-  "instagram": "Instagram",
+  "messenger": "Messenger",
+  "whatsapp": "WhatsApp",
   "twitter": "Twitter",
-  "linkedin": "Linkedin",
   "beInterpreterDescription": "Tercüman olmak için aşağıdaki formu doldurabilirsiniz. Tercüman listesine https://buradan erişebilirsiniz.",
   "interpreterListDescription": "Tercüman listesine aşağıdaki tablodan erişebilirsiniz. Yeni tercüman başvurusunu https://buradan yapabilirsiniz.",
   "interpreterListDescription2": "Tercüman listesine aşağıdaki tablodan erişebilirsiniz. Profilinizi https://buradan görebilirsiniz.",
