--- a/lang/ar.json
+++ b/lang/ar.json
@@ -39,8 +39,8 @@
   "onlineSupport": "دعم عبر الإنترنت / الرقي",
   "availableSupport": "لغات الدعم التي يمكنني توفيرها",
   "addContactAddress": "أضف عنوان الاتصا",
-  "addFacebook": "أدخل عنوان Facebook الخاص بك...",
-  "addInstagram": "أدخل عنوان Instagram الخاص بك...",
+  "addMessenger": "أدخل عنوان Messenger الخاص بك...",
+  "addWhatsApp": "أدخل عنوان WhatsApp الخاص بك...",
   "addTwitter": "أدخل عنوان Twitter الخاص بك...",
   "addLinkedin": "أدخل عنوان LinkedIn الخاص بك...",
   "consentForm": "لقد قرأت نص الخصوصية وأوافق عليه.",
@@ -72,10 +72,9 @@
   "chooseLanguage": "اختر اللغة",
   "translationLanguage": "لغة الترجمة",
   "contantInformation": "معلومات الاتصال",
-  "facebook": "فيسبوك",
-  "instagram": "إنستغرام",
+  "messenger": "فيسبوك",
+  "whatsapp": "إنستغرام",
   "twitter": "تويتر",
-  "linkedin": "لينكد إن",
   "beInterpreterDescription": "يمكنك ملء النموذج أدناه لتصبح مترجمًا. يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
   "interpreterListDescription": "يمكنك الوصول إلى قائمة المترجمين من الجدول أدناه. يمكنك التقدم للحصول على مترجم جديد على https://هنا.",
   "interpreterListDescription2": "يمكنك الوصول إلى قائمة المترجمين من خلال الجدول أدناه. يمكنك مشاهدة ملفك الشخصي https://هنا.",
