feat: phone input

--- a/lang/ku.json
+++ b/lang/ku.json
@@ -43,6 +43,7 @@
     "addWhatsApp": "Navnîşana Xwe ya WhatsAppê Binivîse",
     "addTwitter": "Navnîşana Xwe ya Twitterê Binivîse",
     "addLinkedin": "Navnîşana Xwe ya Linkedinê Binivîse",
+    "sameWithPhone": "Navnîşana Xwe ya Tîmê Piştgiriyê Binivîse",
     "consentForm": "Min Nivîsara Zelalkirinê xwend û qebûl kir.",
     "infoVerification": "Di agahdariya ku min daye ez qebûl dikim û radigihînim ku agahdariya ku min li ser mayîn, hilweşandin, alîkarî û hewcedariyên piştgiriyê dane rast û piştrast in, ku min hemî tedbîr û tedbîrên pêwîst girtine ji bo pêşîgirtina li qirêjiya agahdarî û kiryarên xelet, û ku ez ê ji her guhertin û nûvekirinan ragihînim.",
     "applyInterpreter": "Hûn dikarin lîsteya wergêran di tabloya jêrîn de bibînin. Hûn dikarin li vir ji bo wergerek nû serlêdan bikin.",
