--- a/lang/tr.json
+++ b/lang/tr.json
@@ -43,6 +43,7 @@
   "addWhatsApp": "WhatsApp adresinizi giriniz..",
   "addTwitter": "Twitter adresinizi giriniz..",
   "addLinkedin": "Linkedin adresinizi giriniz..",
+  "sameWithPhone": "Telefon numarası ile aynı",
   "consentForm": "Aydınlatma Metni'ni okudum ve kabul ediyorum.",
   "infoVerification": "Enkaz, yıkım, yardım ve destek ihtiyaçları konusunda verdiğim bilgilerin doğru ve teyit edilmiş olduğunu, bilgi kirliliği ve yanlış uygulamalara yol açmamak için gerekli tüm önlem ve tedbirleri aldığımı, vermiş olduğum bilgilerde meydana gelen değişiklik ve güncellemeleri bildireceğimi kabul ve beyan ederim.",
   "applyInterpreter": "Tercüman listesine asağıdaki tablodan ulaşabilirsiniz. Yeni tercüman başvurusu buradan yapabilirsiniz.",
