fix: Become translator and edit translator profile form UI and validation

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -43,7 +43,7 @@
   "addWhatsApp": "أدخل عنوان WhatsApp الخاص بك...",
   "addTwitter": "أدخل عنوان Twitter الخاص بك...",
   "addLinkedin": "أدخل عنوان LinkedIn الخاص بك...",
-  "sameWithPhone": "نفس العنوان الذي أدخلته أعلاه",
+  "sameAsWhatsApp": "نفس رقم هاتفي في الواتساب.",
   "consentForm": "لقد قرأت نص الخصوصية وأوافق عليه.",
   "infoVerification": "أوافق وأصرح بأن المعلومات التي قدمتها بشأن المساعدة والدعم صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع الاستخدم الغير قانوني للمعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها", 
   "applyInterpreter": "يمكنك الوصول إلى قائمة المترجم عبر الجدول في الاسفل. يمكن إجراء طلب جديد للمترجم هنا.",
