--- a/lang/en.json
+++ b/lang/en.json
@@ -43,7 +43,7 @@
   "addWhatsApp": "Enter your WhatsApp address.",
   "addTwitter": "Enter your Twitter address.",
   "addLinkedin": "Enter your LinkedIn address.",
-  "sameWithPhone": "Same with Phone Number",
+  "sameAsWhatsApp": "Same as my WhatsApp number",
   "consentForm": "By continuing, I agree to the terms and conditions",
   "infoVerification": "I accept and declare that the information I have provided on debris, demolition, aid and support needs is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and misapplications, and that I will notify any changes and updates in the information I have given.",
   "applyInterpreter": "You can find the list of interpreter in the table below. You can apply for a new interpreter here.",
