--- a/lang/ru.json
+++ b/lang/ru.json
@@ -43,7 +43,7 @@
   "addWhatsApp": "Введите свой адрес WhatsApp..",
   "addTwitter": "Введите свой адрес Twitter..",
   "addLinkedin": "Введите свой адрес Linkedin..",
-  "sameWithPhone": "Тот же, что и номер телефона",
+  "sameAsWhatsApp": "То же самое, что и мой номер WhatsApp",
   "consentForm": " Я прочитал и согласен с условиями разъяснительного текста.",
   "infoVerification": "Я принимаю и заявляю, что информация, которую я предоставил о обломках, катастрофах, потребностях в помощи и поддержке, верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправильных действий, и что я буду уведомлять о любых изменениях и обновлениях в информации, которую я дал.",
   "applyInterpreter": "Список переводчиков вы можете найти в таблице ниже. Вы можете подать заявку на нового переводчика здесь.",
